# recruitment-framework-workflow

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
app/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
app/backend/app/: config.py  database.py  exceptions.py  main.py
app/backend/app/dependencies/: auth.py
app/backend/app/models/: __init__.py  candidate.py  candidate_position.py  document.py  enums.py  evaluation.py  position.py  position_rubric.py  rubric_template.py  team.py  user.py
app/backend/app/routers/: auth.py  (+9 more)
app/backend/migrations/: env.py  script.py.mako
app/backend/scripts/: export_openapi.py  seed.py
app/backend/tests/: conftest.py  helpers.py  test_auth.py  test_candidates.py  test_dashboard.py  test_documents.py  test_evaluation_rerun.py  test_evaluation_sse.py  test_evaluation_trigger.py  test_evaluations.py  test_feedback_trigger.py  test_health.py  test_position_rubric_actions.py  test_position_rubrics.py  test_positions.py  test_rubric_template_crud.py  test_rubric_templates.py  test_teams.py  test_users.py
app/lambdas/: .gitignore  Dockerfile.local  README.md  local_orchestrator.py  pyproject.toml  requirements-layer.txt  requirements.txt
app/lambdas/cv_analysis/: handler.py
app/lambdas/feedback_gen/: handler.py
app/lambdas/recommendation/: handler.py
app/lambdas/screening_eval/: handler.py
app/lambdas/shared/: bedrock.py  config.py  db.py  evaluation_lifecycle.py  mock_bedrock.py  models.py  queries.py  s3.py  utils.py
app/lambdas/technical_eval/: handler.py
app/lambdas/tests/: test_cv_analysis_handler.py  test_feedback_gen_handler.py  test_recommendation_handler.py  test_screening_eval_handler.py  test_shared.py  test_technical_eval_handler.py
(+314 files in other folders)
